# BiztonsagosGang-2021

./: .flaskenv.txt  README.md  openapi.yaml  requirements.txt
API/: auth.py  db.sqlite  main.py  models.py
App.CiffCaff.Android/CiffCaff/: AppKey  settings.gradle
App.CiffCaff.Android/CiffCaff/app/: build.gradle
App.CiffCaff.Android/CiffCaff/app/debug/: output-metadata.json
App.CiffCaff.Android/CiffCaff/app/src/main/: AndroidManifest.xml
App.CiffCaff.Android/CiffCaff/gradle/wrapper/: gradle-wrapper.properties
backend/: .flaskenv  .gitignore  requirements.txt
backend/API/: __init__.py  auth.py  db.sqlite  db_manager.py  main.py  models.py  parser_wrapper.py  swagger.py
backend/API/static/: openapi.yaml
docs/figures/sequences/: 01Regisztracio.txt  02Bejelentkezés.txt  03FelhAdatModositas.txt  04FelhAdatTörlése.txt  05Feltöltés.txt  06Caffletöltés.txt  07Caff keresés.txt  08CaffMód.txt  09CAFFTörlés.txt  10Kommentelés.txt  11KommMód.txt  12KommentTörlés.txt  13CAFFmegjelenítés.txt  14AbuseTörlés.txt  15AbuseJelszó.txt
parser/: .gitignore  CMakeLists.txt  Parser.sln  README.md
parser/Parser/: Block.h  CAFF.cpp  CAFF.h  CAFF_ANIM.cpp  CAFF_ANIM.h  CAFF_CREDITS.cpp  CAFF_CREDITS.h  CAFF_HEADER.cpp  CAFF_HEADER.h  CIFF.cpp  CIFF.h  CMakeLists.txt  Makefile  Parser.cpp  Parser.vcxproj  Parser.vcxproj.filters  Pixel.h  PythonInterop.cpp  README.md  Reader.h  showfile.py
parser/Parser.Test/: Parser.Test.vcxproj  test.cpp
parser/PythonWrapper/: CMakeLists.txt
parser/caff_files/: incorrectCreatorNameLen.caff  incorrectMagic.caff  neg.caff  poc64.caff
(+131 files in other folders)
